build: Clean up external build deploy directories before cmake configuration step
(cherry picked from commit 0ad3d8bb6a1d015a7a62ea43aabc3398fe7ac779)

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -25,11 +25,11 @@ set(CMAKE_INSTALL_RPATH "$ORIGIN:$ORIGIN/../lib:${CMAKE_INSTALL_PREFIX}/lib")
 # Collect common arguments to configure external projects
 set(EP_CMAKE_EXTRA_ARGS
     -DCMAKE_BUILD_TYPE=Release
-    -DCMAKE_INSTALL_LIBDIR=lib # override default lib64 on some systems
-    -DCMAKE_INSTALL_RPATH=${CMAKE_INSTALL_RPATH}
     -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
     -DCMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}
     -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
+    -DCMAKE_INSTALL_LIBDIR=${CMAKE_INSTALL_LIBDIR}
+    -DCMAKE_INSTALL_RPATH=${CMAKE_INSTALL_RPATH}
     -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
     -DCMAKE_CXX_COMPILER_LAUNCHER=${CMAKE_CXX_COMPILER_LAUNCHER}
     -DCMAKE_C_COMPILER_LAUNCHER=${CMAKE_C_COMPILER_LAUNCHER})
