chore: Fixes cmake compatibility for a third party dependency

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -143,6 +143,7 @@ if(eCAL IN_LIST EXTERNAL_PROJECTS_LIST)
         -DECAL_THIRDPARTY_BUILD_PROTOBUF=ON
         -DECAL_INSTALL_SAMPLE_SOURCES=OFF
         -DECAL_CPACK_PACK_WITH_INNOSETUP=OFF
+        -DCMAKE_POLICY_VERSION_MINIMUM=3.5
         -DCMAKE_PROJECT_TOP_LEVEL_INCLUDES=cmake/submodule_dependencies.cmake)
     ExternalProject_Add(
       eCAL
