--- a/modules/common/app/config/CMakeLists.txt
+++ b/modules/common/app/config/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Copyright (C) 2024 GRAPE Contributors
 # =================================================================================================
 
-set(CONFIG_SOURCES config.lua)
+set(CONFIG_SOURCES app.lua)
 foreach(f ${CONFIG_SOURCES})
   configure_file(${f} ${CMAKE_BINARY_DIR}/share/${CMAKE_PROJECT_NAME}/config/${f})
 endforeach()
