feat(ipc): Introduces singleton session
(cherry picked from commit 878a8ab1158ecd927b912c6e96dd496808177f3c)

--- a/modules/common/ipc/CMakeLists.txt
+++ b/modules/common/ipc/CMakeLists.txt
@@ -4,19 +4,18 @@
 
 declare_module(
   NAME ipc
-  DEPENDS_ON_MODULES "utils;conio"
+  DEPENDS_ON_MODULES "base;utils;conio"
   DEPENDS_ON_EXTERNAL_PROJECTS "eCAL")
 
 find_package(eCAL REQUIRED) # TODO(vilas): ${ECAL_VERSION_REQUIRED} REQUIRED)
 
 # library sources
 set(SOURCES
-    src/publisher_impl.h
-    src/subscriber_impl.h
     src/publisher.cpp
     src/session.cpp
     src/subscriber.cpp
     README.md
+    include/grape/ipc/config.h
     include/grape/ipc/match.h
     include/grape/ipc/publisher.h
     include/grape/ipc/session.h
@@ -26,7 +25,7 @@ set(SOURCES
 # library target
 define_module_library(
   NAME ipc
-  PUBLIC_LINK_LIBS grape::utils eCAL::core
+  PUBLIC_LINK_LIBS grape::base grape::utils eCAL::core
   PRIVATE_LINK_LIBS ""
   SOURCES ${SOURCES}
   PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
