feat(utils): Adds file system utilities
(cherry picked from commit 24030a37fbdcdfff635c9638f9e1a7d8201d577b)

--- a/modules/common/utils/CMakeLists.txt
+++ b/modules/common/utils/CMakeLists.txt
@@ -14,11 +14,13 @@ configure_file(src/version.in ${CMAKE_CURRENT_SOURCE_DIR}/src/version_impl.h @ON
 # library sources
 set(SOURCES
     src/ip.cpp
+    src/file_system.cpp
     src/stacktrace.cpp
     src/utils.cpp
     src/version.cpp
     README.md
     include/grape/utils/enums.h
+    include/grape/utils/file_system.h
     include/grape/utils/ip.h
     include/grape/utils/stacktrace.h
     include/grape/utils/utils.h
