chore: fix: Minor cleanups
(cherry picked from commit 4d6a0bb7ab083b3d5468820dd6ae9f7ff5c35897)

--- a/modules/common/base/examples/CMakeLists.txt
+++ b/modules/common/base/examples/CMakeLists.txt
@@ -2,8 +2,4 @@
 # Copyright (C) 2023 GRAPE Contributors
 # =================================================================================================
 
-define_module_example(
-  NAME exception_example
-  SOURCES exception_example.cpp
-  PUBLIC_INCLUDE_PATHS ""
-  PUBLIC_LINK_LIBS "")
+define_module_example(NAME exception_example SOURCES exception_example.cpp)
