--- a/modules/common/serdes/examples/CMakeLists.txt
+++ b/modules/common/serdes/examples/CMakeLists.txt
@@ -2,21 +2,11 @@
 # Copyright (C) 2024 GRAPE Contributors
 # =================================================================================================
 
-define_module_example(
-  NAME example
-  SOURCES example.cpp
-  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-  PUBLIC_LINK_LIBS "")
+define_module_example(NAME example SOURCES example.cpp)
 
-define_module_example(
-  NAME advanced_example
-  SOURCES advanced_example.cpp advanced_example.h
-  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-  PUBLIC_LINK_LIBS "")
+define_module_example(NAME advanced_example SOURCES advanced_example.cpp advanced_example.h)
 
 define_module_example(
   NAME bench
   SOURCES bench.cpp advanced_example.h
-  PRIVATE_INCLUDE_PATHS ""
-  PRIVATE_LINK_LIBS benchmark::benchmark
-  PUBLIC_LINK_LIBS "")
+  PRIVATE_LINK_LIBS benchmark::benchmark)
