--- a/modules/probe/monitor/examples/CMakeLists.txt
+++ b/modules/probe/monitor/examples/CMakeLists.txt
@@ -2,8 +2,4 @@
 # Copyright (C) 2024 GRAPE Contributors
 # =================================================================================================
 
-define_module_example(
-  NAME example
-  SOURCES example.cpp
-  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-  PUBLIC_LINK_LIBS "")
+define_module_example(NAME example SOURCES example.cpp)
