--- a/modules/probe/monitor/tests/CMakeLists.txt
+++ b/modules/probe/monitor/tests/CMakeLists.txt
@@ -2,8 +2,4 @@
 # Copyright (C) 2024 GRAPE Contributors
 # =================================================================================================
 
-define_module_test(
-  NAME tests
-  SOURCES tests.cpp
-  PUBLIC_INCLUDE_PATHS $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
-  PUBLIC_LINK_LIBS "")
+define_module_test(NAME tests SOURCES tests.cpp)
