--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project(grape LANGUAGES CXX C)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_UNITY_BUILD ON)
 
 # Integrate the Grape Build System to setup the project
 include(${CMAKE_SOURCE_DIR}/external/third_party_versions.cmake)
