--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -11,45 +11,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Fetch history for versioning
+        run: |
+          git fetch --unshallow --tags || git fetch --depth=100 --tags
+
       - name: Install system dependencies and utilities 
         run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            software-properties-common build-essential pkg-config gpg wget ca-certificates \
-            git-lfs curl ninja-build ccache doxygen graphviz linux-generic python3-full \
-            python3-dev python-is-python3 pybind11-dev python3-wheel python3-setuptools \
-            python3-build pipx patch libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev \
-            libxkbcommon-dev libwayland-dev wayland-protocols
-          pipx install cmakelang
+          chmod +x ./toolchains/install_base.sh
+          ./toolchains/install_base.sh
 
       - name: Install CMake
         run: |
-          wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
-          echo "deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/kitware.list >/dev/null
-          sudo apt-get update
-          sudo rm /usr/share/keyrings/kitware-archive-keyring.gpg
-          sudo apt-get install -y kitware-archive-keyring
-          sudo apt-get install -y cmake
+          chmod +x ./toolchains/install_cmake.sh
+          ./toolchains/install_cmake.sh
 
       - name: Install LLVM/Clang toolchain
         run: |
-          wget https://apt.llvm.org/llvm.sh
-          wget -O- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-          CLANG_VERSION=21
-          chmod +x llvm.sh
-          sudo ./llvm.sh $CLANG_VERSION
-          sudo apt-get install -y clang-$CLANG_VERSION clang-tidy-$CLANG_VERSION clang-format-$CLANG_VERSION \
-          llvm-$CLANG_VERSION-dev libc++-$CLANG_VERSION-dev libomp-$CLANG_VERSION-dev libc++abi-$CLANG_VERSION-dev \
-          libunwind-$CLANG_VERSION-dev lld-$CLANG_VERSION
-          PRIORITY=${CLANG_VERSION%%.*}
-          sudo update-alternatives --remove-all clang || true
-          sudo update-alternatives --remove-all clang++ || true
-          sudo update-alternatives --remove-all clang-tidy || true
-          sudo update-alternatives --remove-all clang-format || true
-          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-$CLANG_VERSION $PRIORITY
-          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-$CLANG_VERSION $PRIORITY
-          sudo update-alternatives --install /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-$CLANG_VERSION $PRIORITY
-          sudo update-alternatives --install /usr/bin/clang-format clang-format /usr/bin/clang-format-$CLANG_VERSION $PRIORITY
+          chmod +x ./toolchains/install_llvm.sh
+          ./toolchains/install_llvm.sh
 
       - name: Set cache directories
         run: |
@@ -65,13 +47,6 @@ jobs:
           key: ${{ runner.os }}-ccache-ctcache-${{ hashFiles('**/CMakeLists.txt', '**/*.cmake', '**/toolchain.cmake') }}          
           restore-keys: |
             ${{ runner.os }}-ccache-ctcache-
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Fetch history for versioning
-        run: |
-          git fetch --unshallow --tags || git fetch --depth=100 --tags
 
       - name: Configure
         run: cmake --preset clang
