build: Cleans up build rules for eCAL a bit

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -116,15 +116,18 @@ if(eCAL IN_LIST EXTERNAL_PROJECTS_LIST)
   else()
     message(STATUS "eCAL: Building ${ECAL_VERSION_REQUIRED} from source")
     set(ECAL_CMAKE_ARGS ${EP_CMAKE_EXTRA_ARGS} 
+        -DECAL_USE_CURL=OFF
+        -DECAL_USE_FTXUI=OFF
+        -DECAL_CORE_CONFIGURATION=OFF
         -DECAL_USE_HDF5=OFF
         -DECAL_USE_QT=OFF
         -DECAL_BUILD_APPS=OFF
         -DECAL_BUILD_SAMPLES=OFF
-	    -DECAL_THIRDPARTY_BUILD_TCP_PUBSUB=ON
-	    -DECAL_THIRDPARTY_BUILD_YAML-CPP=OFF
-        -DECAL_THIRDPARTY_BUILD_PROTOBUF=ON
         -DECAL_INSTALL_SAMPLE_SOURCES=OFF
         -DECAL_CPACK_PACK_WITH_INNOSETUP=OFF
+	-DECAL_THIRDPARTY_BUILD_YAML-CPP=OFF
+	-DECAL_THIRDPARTY_BUILD_TCP_PUBSUB=ON
+        -DECAL_THIRDPARTY_BUILD_PROTOBUF=ON
         -DCMAKE_POLICY_VERSION_MINIMUM=3.5
         -DCMAKE_PROJECT_TOP_LEVEL_INCLUDES=cmake/submodule_dependencies.cmake)
     ExternalProject_Add(
