--- a/modules/common/realtime/tests/CMakeLists.txt
+++ b/modules/common/realtime/tests/CMakeLists.txt
@@ -2,6 +2,5 @@
 # Copyright (C) 2023 GRAPE Contributors
 # =================================================================================================
 
-define_module_test(
-  NAME tests
-  SOURCES mpscq_tests.cpp fifo_buffer_tests.cpp string_tests.cpp mutex_tests.cpp)
+define_module_test(NAME tests SOURCES mpscq_tests.cpp fifo_buffer_tests.cpp string_tests.cpp
+                                      mutex_tests.cpp)
