--- a/modules/common/serdes/CMakeLists.txt
+++ b/modules/common/serdes/CMakeLists.txt
@@ -8,11 +8,8 @@ declare_module(
   DEPENDS_ON_EXTERNAL_PROJECTS "")
 
 # library sources
-set(SOURCES 
-  README.md
-  include/grape/serdes/concepts.h
-  include/grape/serdes/serdes.h
-  include/grape/serdes/stream.h)
+set(SOURCES README.md include/grape/serdes/concepts.h include/grape/serdes/serdes.h
+            include/grape/serdes/stream.h)
 
 # library target
 define_module_library(
