--- a/modules/common/utils/tests/CMakeLists.txt
+++ b/modules/common/utils/tests/CMakeLists.txt
@@ -2,6 +2,5 @@
 # Copyright (C) 2023 GRAPE Contributors
 # =================================================================================================
 
-define_module_test(
-  NAME tests
-  SOURCES utils_tests.cpp enum_tests.cpp ip_tests.cpp file_system_tests.cpp)
+define_module_test(NAME tests SOURCES utils_tests.cpp enum_tests.cpp ip_tests.cpp
+                                      file_system_tests.cpp)
